# RayTracer

./: CMakeLists.txt  README.md
libraries/: glad.c
libraries/include/glad/: glad.h
libraries/src/: glad.c
res/: fragment.glsl  main.comp  vertex.glsl
src/: Shader.cpp  Shader.h  main.cpp
src/input/: KeyboardInput.cpp  KeyboardInput.h  MouseInput.cpp  MouseInput.h
